--- a/requirements.txt
+++ b/requirements.txt
@@ -1,481 +1,7 @@
-absl-py==0.12.0
-actionlib==1.13.2
-aiohttp==3.7.4.post0
-alabaster==0.7.12
-angles==1.9.13
-aniso8601==9.0.1
-ansi2html==1.6.0
-apturl==0.5.2
-argcomplete==1.8.1
-argon2-cffi==21.1.0
-asgiref==3.4.1
-astroid==2.4.2
-astunparse==1.6.3
-async-generator==1.10
-async-timeout==3.0.1
-atomicwrites==1.4.0
-attrs==20.2.0
-autobahn==17.10.1
-Automat==0.8.0
-autopep8==1.5.4
-Babel==2.8.0
-backcall==0.2.0
-bcrypt==3.1.7
-bleach==3.2.1
-blinker==1.4
-bondpy==1.8.6
-breezy==3.0.2
-Brlapi==0.7.0
-Brotli==1.0.9
-cachetools==4.2.2
-camera-calibration==1.15.3
-camera-calibration-parsers==1.12.0
-catkin==0.8.10
-catkin-pkg==0.4.23
-catkin-pkg-modules==0.4.23
-catkin-tools==0.5.0
-cbor==1.0.0
-certifi==2020.6.20
-cffi==1.14.6
-chardet==3.0.4
-chrome-gnome-shell==0.0.0
-click==8.0.1
-cloudpickle==1.6.0
-colcon-argcomplete==0.3.3
-colcon-bash==0.4.2
-colcon-cd==0.1.1
-colcon-cmake==0.2.26
-colcon-common-extensions==0.2.1
-colcon-core==0.6.1
-colcon-defaults==0.2.5
-colcon-devtools==0.2.2
-colcon-library-path==0.2.1
-colcon-metadata==0.2.5
-colcon-notification==0.2.13
-colcon-output==0.2.12
-colcon-package-information==0.3.3
-colcon-package-selection==0.2.10
-colcon-parallel-executor==0.2.4
-colcon-pkg-config==0.1.0
-colcon-powershell==0.3.6
-colcon-python-setup-py==0.2.7
-colcon-recursive-crawl==0.2.1
-colcon-ros==0.3.21
-colcon-test-result==0.3.8
-colcon-zsh==0.4.0
-colorama==0.4.3
-command-not-found==0.3
-configobj==5.0.6
-constantly==15.1.0
-controller-manager==0.19.4
-controller-manager-msgs==0.19.4
-cov-core==1.15.0
-coverage==4.5.2
-cryptography==2.8
-cupshelpers==1.0
-cv-bridge==1.15.0
-cvxpy==1.1.12
-cycler==0.10.0
-Cython==0.29.14
-dash==2.0.0
-dash-core-components==2.0.0
-dash-html-components==2.0.0
-dash-table==5.0.0
-dataclasses==0.6
-dbus-python==1.2.16
-decorator==4.4.2
-defer==1.0.6
-defusedxml==0.6.0
-Deprecated==1.2.7
-diagnostic-analysis==1.10.4
-diagnostic-common-diagnostics==1.10.4
-diagnostic-updater==1.10.4
-diff-match-patch==20200713
-distlib==0.3.0
-distro==1.4.0
-distro-info===0.23ubuntu1
-Django==3.2.6
-django-allauth==0.45.0
-django-import-export==2.5.0
-docopt==0.6.2
-docutils==0.16
-dulwich==0.19.15
-duplicity==0.8.12.0
-dynamic-reconfigure==1.7.1
-ecos==2.0.7.post1
-empy==3.3.2
-entrypoints==0.3
-et-xmlfile==1.1.0
-fasteners==0.14.1
-fastimport==0.9.8
-flake8==3.8.4
-Flask==2.0.1
-Flask-Compress==1.10.1
-Flask-RESTful==0.3.9
-flatbuffers==1.12
-future==0.18.2
-gast==0.4.0
-gazebo_plugins==2.9.2
-gazebo_ros==2.9.2
-gencpp==0.6.5
-geneus==3.0.0
-genlisp==0.4.18
-genmsg==0.5.16
-gennodejs==2.0.2
-genpy==0.6.15
-google-auth==1.30.1
-google-auth-oauthlib==0.4.4
-google-pasta==0.2.0
-gpg===1.13.1-unknown
-greenlet==0.4.15
-grpcio==1.34.1
-gunicorn==20.1.0
-gym==0.18.3
-gym-string==0.0.1
-h5py==3.1.0
-helpdev==0.7.1
-httplib2==0.14.0
-hyperlink==19.0.0
-idna==2.8
-image-geometry==1.15.0
-imageio==2.9.0
-imagesize==1.2.0
-importlib-metadata==1.5.0
-incremental==16.10.1
-iniconfig==1.1.1
-injector==0.18.4
-install==1.3.4
-interactive-markers==1.12.0
-intervaltree==3.1.0
-iotop==0.6
-ipykernel==5.3.4
-ipython==7.18.1
-ipython-genutils==0.2.0
-ipywidgets==7.6.4
-isort==5.6.1
-itsdangerous==2.0.1
-jedi==0.17.1
-Jinja2==3.0.1
-joblib==1.0.1
-joint_state_publisher==1.15.0
-joint_state_publisher_gui==1.15.0
-jsonschema==3.2.0
-jupyter-client==6.1.7
-jupyter-core==4.6.3
-jupyter-dash==0.4.0
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.1
-kaggle==1.5.12
-keras-nightly==2.5.0.dev2021032900
-Keras-Preprocessing==1.1.2
-keyring==18.0.1
-kiwisolver==1.2.0
-language-selector==0.1
-laser_geometry==1.6.7
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lazy-object-proxy==1.4.3
-lockfile==0.12.2
-louis==3.12.0
-lz4==3.0.2+dfsg
-macaroonbakery==1.3.1
-Mako==1.1.0
-Markdown==3.3.4
-MarkupPy==1.14
-MarkupSafe==2.0.1
-matplotlib==3.1.2
-mavros==1.7.1
-mccabe==0.6.1
-mediapipe==0.8.7.1
-meson==0.53.2
-message-filters==1.15.11
-mistune==0.8.4
-monotonic==1.5
-more-itertools==4.2.0
-mpi4py==3.0.3
-mpmath==1.2.1
-msgpack==1.0.2
-mss==6.1.0
-multidict==5.1.0
-nbclient==0.5.0
-nbconvert==6.0.7
-nbformat==5.0.7
-nest-asyncio==1.4.1
-netifaces==0.10.4
-networkx==2.6.2
-nose==1.3.7
-nose2==0.9.1
-notebook==6.4.3
-notify2==0.3
-numpy==1.19.2
-numpydoc==1.1.0
-oauthlib==3.1.0
-odfpy==1.4.1
-olefile==0.46
-opencv-contrib-python==4.5.1.48
-opencv-python==4.4.0.44
-openpyxl==3.0.7
-opt-einsum==3.3.0
-osqp==0.6.2.post0
-packaging==20.4
-pafy==0.5.5
-Panda3D==1.10.7
-pandas==1.2.3
-pandocfilters==1.4.2
-paramiko==2.6.0
-parso==0.7.0
-pathlib==1.0.1
-pathtools==0.1.2
-peewee==3.14.4
-pexpect==4.6.0
-pickleshare==0.7.5
-Pillow==7.0.0
-pipreqs==0.4.10
-plotly==5.3.1
-pluggy==0.13.1
-progressbar2==3.53.1
-prometheus-client==0.11.0
-prompt-toolkit==3.0.7
-protobuf==3.17.1
-psutil==5.7.2
-psycopg2==2.9.1
-ptyprocess==0.7.0
-py==1.10.0
-py-ubjson==0.14.0
-py3nvml==0.2.6
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-pycairo==1.16.2
-pycodestyle==2.6.0
-pycparser==2.20
-pycrypto==2.6.1
-pycryptodomex==3.6.1
-pycups==1.9.73
-pydocstyle==5.1.1
-pydot==1.4.1
-pyflakes==2.2.0
-PyGithub==1.43.7
-pyglet==1.5.15
-Pygments==2.7.1
-PyGObject==3.38.0
-PyHamcrest==1.9.0
-PyJWT==1.7.1
-pylint==2.6.0
-pymacaroons==0.13.0
-Pympler==0.8
-PyNaCl==1.3.0
-pynvim==0.4.1
-PyOpenGL==3.1.0
-pyOpenSSL==19.0.0
-pyparsing==2.4.7
-pypng==0.0.20
-PyQRCode==1.2.1
-PyQt5==5.15.2
-pyqt5-plugins==5.15.2.2.0.1
-PyQt5-sip==12.8.1
-pyqt5-tools==5.15.2.3.0.2
-PyQtWebEngine==5.12.1
-pyquaternion==0.9.9
-pyRFC3339==1.1
-pyrsistent==0.17.3
-PySimpleGUI==4.46.0
-pytest==6.2.4
-pytest-cov==2.8.1
-pytest-timeout==1.4.2
-python-apt==2.0.0+ubuntu0.20.4.4
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
-python-dotenv==0.15.0
-python-gitlab==2.0.1
-python-gnupg==0.4.5
-python-jsonrpc-server==0.4.0
-python-language-server==0.35.1
-python-qt-binding==0.4.3
-python-slugify==5.0.2
-python-snappy==0.5.3
-python-utils==2.5.6
-python-xlib==0.29
-python3-openid==3.2.0
-PyTrie==0.2
-pytube @ git+https://github.com/nficano/pytube@10989d2b7a5c1825958904638932c0a3d8147d71
-pytz==2019.3
-PyWavelets==1.1.1
-pyxdg==0.27
-PyYAML==5.3.1
-pyzmq==19.0.2
-QDarkStyle==2.8.1
-qdldl==0.1.5.post0
-qt-dotgraph==0.4.2
-qt-gui==0.4.2
-qt-gui-cpp==0.4.2
-qt-gui-py-common==0.4.2
-qt5-applications==5.15.2.2.1
-qt5-tools==5.15.2.1.0.1
-QtAwesome==1.0.1
-qtconsole==4.7.7
-QtPy==1.9.0
-reportlab==3.5.34
-requests==2.25.1
-requests-oauthlib==1.3.0
-requests-unixsocket==0.2.0
-resource_retriever==1.12.6
-retrying==1.3.3
-roman==2.0.0
-rope==0.18.0
-rosbag==1.15.11
-rosboost-cfg==1.15.7
-rosclean==1.15.7
-roscreate==1.15.7
-rosdep==0.20.1
-rosdep-modules==0.20.1
-rosdistro==0.8.3
-rosdistro-modules==0.8.3
-rosgraph==1.15.11
-roslaunch==1.15.11
-roslib==1.15.7
-roslint==0.12.0
-roslz4==1.15.11
-rosmake==1.15.7
-rosmaster==1.15.11
-rosmsg==1.15.11
-rosnode==1.15.11
-rosparam==1.15.11
-rospkg==1.2.10
-rospkg-modules==1.3.0
-rospy==1.15.11
-rosservice==1.15.11
-rostest==1.15.11
-rostopic==1.15.11
-rosunit==1.15.7
-roswtf==1.15.11
-rqt-moveit==0.5.10
-rqt-reconfigure==0.5.4
-rqt-robot-dashboard==0.5.8
-rqt-robot-monitor==0.5.13
-rqt-rviz==0.6.1
-rqt_action==0.4.9
-rqt_bag==0.5.1
-rqt_bag_plugins==0.5.1
-rqt_console==0.4.11
-rqt_dep==0.4.11
-rqt_graph==0.4.14
-rqt_gui==0.5.2
-rqt_gui_py==0.5.2
-rqt_image_view==0.4.16
-rqt_launch==0.4.9
-rqt_logger_level==0.4.11
-rqt_msg==0.4.10
-rqt_nav_view==0.5.7
-rqt_plot==0.4.13
-rqt_pose_view==0.5.11
-rqt_publisher==0.4.10
-rqt_py_common==0.5.2
-rqt_py_console==0.4.10
-rqt_robot_steering==0.5.12
-rqt_runtime_monitor==0.5.9
-rqt_service_caller==0.4.10
-rqt_shell==0.4.11
-rqt_srv==0.4.9
-rqt_tf_tree==0.6.2
-rqt_top==0.4.10
-rqt_topic==0.4.12
-rqt_web==0.4.10
-rsa==4.7.2
-rviz==1.14.7
-Rx==3.1.1
-scikit-image==0.18.2
-scikit-learn==0.24.1
+numpy==1.17.4
 scipy==1.6.2
-screen-resolution-extra==0.0.0
-scs==2.1.2
-seaborn==0.11.2
-SecretStorage==2.3.1
-Send2Trash==1.8.0
-sensor-msgs==1.13.1
-service-identity==18.1.0
-simplejson==3.16.0
-sip==4.19.21
-six==1.15.0
-smach==2.5.0
-smach-ros==2.5.0
-smclib==1.8.6
-snowballstemmer==2.0.0
-sortedcontainers==2.2.2
-Sphinx==3.2.1
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-spyder-kernels==1.9.4
-sqlparse==0.4.1
-ssh-import-id==5.10
-sympy==1.7.1
-systemd-python==234
-tablib==3.0.0
-tenacity==8.0.1
-tensorboard==2.5.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-tensorflow==2.5.0
-tensorflow-estimator==2.5.0
-termcolor==1.1.0
-terminado==0.11.1
-testpath==0.4.4
-text-unidecode==1.3
-tf==1.13.2
-tf-conversions==1.13.2
-tf2-geometry-msgs==0.7.5
-tf2-kdl==0.7.5
-tf2-py==0.7.5
-tf2-ros==0.7.5
-tf2-sensor-msgs==0.7.5
-threadpoolctl==2.1.0
-tifffile==2021.7.2
-toml==0.10.1
-topic-tools==1.15.11
-torch==1.8.1+cu111
-torch-tb-profiler==0.2.1
-torchaudio==0.8.1
-torchsummary==1.5.1
-torchvision==0.9.1+cu111
-tornado==6.1
-tqdm==4.61.0
-traitlets==5.0.4
-Twisted==18.9.0
-txaio==2.10.0
-typing-extensions==3.7.4.3
-u-msgpack-python==2.1
-ubuntu-advantage-tools==20.3
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-ujson==4.0.0
-unattended-upgrades==0.1
-urllib3==1.25.8
-usb-creator==0.3.7
-vcstool==0.2.15
-vcstools==0.1.42
-wadllib==1.3.3
-watchdog==0.10.3
-wcwidth==0.2.5
-webencodings==0.5.1
-Werkzeug==2.0.1
-whitenoise==5.3.0
-widgetsnbextension==3.5.1
-wrapt==1.12.1
-wsaccel==0.6.2
-wstool==0.1.18
-wurlitzer==2.0.1
-xacro==1.14.6
-xkit==0.0.0
-xlrd==2.0.1
-xlwt==1.3.0
-xmltodict==0.12.0
-yapf==0.30.0
-yarg==0.1.9
-yarl==1.6.3
-youtube-dl==2021.6.6
-zipp==1.0.0
-zope.interface==4.7.1
+matplotlib==3.1.2
+pandas==1.2.3
+dash==2.0.0
+plotly==5.3.1
+scikit_learn==0.24.2
